@@ -1,3 +1,8 @@
+2011-02-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el: added commentary section
+	(soap-load-wsdl-from-url): doc update
+
 2011-02-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el: fixes suggested by `checkdoc' and spelling fixes
